<resources>
    <string name="app_name">Servio</string>
    <string name="log_in_activity_title">Autentificare</string>
    <string name="log_in_button_text">Autentifică</string>
    <string name="create_account_text">Creează cont</string>
    <string name="close_button_text">Închide</string>
    <string name="log_out_button_text">Deconectare</string>
    <string name="employee_managrmrnt_button_text">Angajați</string>
    <string name="halls_management_button_text">Săli</string>
    <string name="menu_management_button_text">Meniu</string>
    <string name="settings_button_text">Setări</string>
    <string name="profile_button_text">Profil</string>
    <string name="user_name_label">Username</string>
    <string name="password_label">Parolă:</string>
    <string name="password_label_confirm">Confirmare parolă:</string>
    <string name="hire_date_label">Data angajării:</string>
    <string name="hire_date_hint">YYYY-MM-DD</string>
    <string name="salary_label">Salariu:</string>
    <string name="salary_hint">4500</string>
    <string name="dish_name_hint">Supă de pui</string>
    <string name="dish_ingredients_hint">Pulpe de pui, cartofi, morcovi</string>
    <string name="dish_weight_hint">1200.0 grame</string>
    <string name="dish_price_hint">35.0 lei</string>
    <string name="sign_up">Sign up</string>
    <string name="password_hint">Parolă cont</string>
    <string name="username_hint">Ionescu Elena</string>
    <string name="username_text">Username</string>
    <string name="email_label">Email:</string>
    <string name="restaurant_label">Nume restaurant:</string>
    <string name="email_hint">utilizator@exemplu.com</string>
    <string name="restaurant_hint">Restaurant</string>
    <string name="job_label">Job:</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="phone_number_hint">0712345678</string>
    <string name="back_label">Înapoi</string>
    <string name="font_family_1">sans-serif-condensed</string>
    <string name="add_hall_button_text">Adaugă sală</string>
    <string name="delete_hall_button_text">Șterge sala</string>
    <string name="swap_hall_button_text">Schimbă sala</string>
    <string name="no_hall_label">Nu există săli de afișat. Pentru a adăuga o sală apasați butonul din meniul din partea de jos.</string>
    <string name="no_employees_label">Nu există angajați de afișat.</string>
    <string name="no_dishes_label">Nu există preparate de afișat.</string>
    <string name="select_hall_label">Selectați sala de afișat:</string>
    <string name="confirm_button_text">Confirmă</string>
    <string name="save_data_button_text">Salvează date</string>
    <string name="activity_dish_info_title">Informații Preparat</string>
    <string name="activity_table_info_title">Informații Masă</string>
    <string name="activity_edit_table_info_title">Modifică Informații Masă</string>
    <string name="dish_name_label">Nume preparat:</string>
    <string name="dish_ingredients_label">Ingrediente:</string>
    <string name="dish_weight_label">Greutate (grame):</string>
    <string name="dish_price_label">Preț (lei):</string>
    <string name="dish_price_label2">Pret: 0.0 lei</string>
    <string name="dish_category_label">Categorie:</string>
    <string name="activity_edit_dish_title">Modifică Informații Preparat</string>
    <string name="change_data_button_text">Modifică Date</string>
    <string name="activity_edit_employee_title">Editează Informații Angajat</string>
    <string name="employee_name_label">Nume complet:</string>
    <string name="name_label">Nume:</string>
    <string name="activity_employee_info_title">Informații Angajat</string>
    <string name="activity_employees_list_title">Listă Angajați</string>
    <string name="search_employee_hint">Căutați angajați dupa nume, prenume sau job</string>
    <string name="add_button_text">+</string>
    <string name="activity_menu_title">Meniu</string>
    <string name="search_dish_hint">Căutați produse după cuvinte cheie</string>
    <string name="activity_new_dish_title">Adăugare Preparat</string>
    <string name="add_dish_button_text">Adaugă Preparat</string>
    <string name="activity_new_employee_title">Adăugare Angajat</string>
    <string name="add_employee_button_text">Adaugă Angajat</string>
    <string name="take_order_button_text">Comenzi</string>
    <string name="table_label">Masa</string>
    <string name="add_order_label">Adaugă Comanda</string>
    <string name="cancel_order_label">Anulează Comanda</string>
    <string name="edit_order_label">Modifică Comanda</string>
    <string name="menu_edit_text_quantity">1</string>
    <string name="save_button_text">Salvează</string>
    <string name="empty_order_label">Nu au fost adăugate produse la comandă.</string>
    <string name="table_number_label">Număr masă:</string>
    <string name="table_number_of_seats_label">Număr scaune:</string>
    <string name="delete_table_label">Șterge Masa</string>
    <string name="edit_table_info_label">Modifică Informații Masă</string>
    <string name="activity_new_wall_title">Selectați Tipul De Perete:</string>
    <string name="active_orders_label">Comenzi active:</string>
    <string name="order_name_label">Nume comandă:</string>
    <string name="hall_name_label">Sala:</string>
    <string name="waiter_name_label">Ospătar:</string>
    <string name="order_time_label">Oră comandă:</string>
    <string name="ordered_dishes_label">Preparate:</string>
    <string name="postpone_button_text">Amână</string>
    <string name="prepare_button_text">Prepară</string>
    <string name="finish_button_text">Finalizează</string>

    <string-array name="employee_types">
        <item> Chef </item>
        <item> Waiter </item>
    </string-array>

    <string-array name="hall_sizes">
        <item>Sala mica: 6 X 8 elemente</item>
        <item>Sala medie: 9 X 12 elemente</item>
        <item>Sala mare: 12 X 16 elemente</item>
    </string-array>

    <string name="title_activity_waiter_ui">WaiterUIActivity</string>

    <string name="path_circle">
    M 50,50
    m -46,2
    a 48,48 0 1,0 96,0
    a 48,48 0 1,0 -96,0
  </string>

</resources>
