<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgr_animation"
    tools:context=".activities.LogInActivity">

    <TextView
        android:id="@+id/loginTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/log_in_activity_title"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@string/font_family_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottomBorderLogin"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/whiteColor"
        app:layout_constraintTop_toBottomOf="@+id/loginTxtView" />

    <TextView
        android:id="@+id/usernameTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/email_label"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/font_size"
        app:fontFamily="@string/font_family_1"
        app:layout_constraintBottom_toTopOf="@+id/mailEditTxtLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/mailEditTxtLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@color/greyHintColor"
        android:textSize="@dimen/font_size"
        app:fontFamily="@string/font_family_1"
        app:layout_constraintBottom_toTopOf="@+id/passwordTxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/passwordTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/password_label"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size"
        app:fontFamily="@string/font_family_1"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/whiteColor"
        android:textColorHint="@color/greyHintColor"
        android:textSize="@dimen/font_size"
        app:fontFamily="@string/font_family_1"
        app:layout_constraintBottom_toTopOf="@+id/exitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_1"
        android:text="@string/log_in_button_text"
        android:textColor="@color/whiteColor"
        app:layout_constraintBottom_toTopOf="@id/exitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/rounded_button_1"
        android:text="@string/close_button_text"
        android:textColor="@color/whiteColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>